Crash in sculpt undo with mask extract after dyntopo toggle #81984

Closed
opened 2020-10-23 00:14:40 +02:00 by Danny McGrath · 14 comments
Member

System Information
Operating system: Ubuntu 18.04
Graphics card: Nvidia 960

Blender Version
Broken: 2.83.8 LTS

Short description of error
Extract mask crashes blender during undo after toggling dyntopo

Exact steps for others to reproduce the error

  • open attached blend file
  • turn dyntopo on, then off
  • press F3 and search for "mask extract"
  • press "ok" on mask extract options
  • press ctrl-z to undo

File:
MaskExtractCrash.blend

Crash log:
Thursday_22-October-2020_17.45_02.crash.txt

**System Information** Operating system: Ubuntu 18.04 Graphics card: Nvidia 960 **Blender Version** Broken: 2.83.8 LTS **Short description of error** Extract mask crashes blender during undo after toggling dyntopo **Exact steps for others to reproduce the error** - open attached blend file - turn dyntopo on, then off - press F3 and search for "mask extract" - press "ok" on mask extract options - press ctrl-z to undo File: [MaskExtractCrash.blend](https://archive.blender.org/developer/F9038666/MaskExtractCrash.blend) Crash log: [Thursday_22-October-2020_17.45_02.crash.txt](https://archive.blender.org/developer/F9038676/Thursday_22-October-2020_17.45_02.crash.txt)
Author
Member

Added subscriber: @dmcgrath

Added subscriber: @dmcgrath
Member

Added subscriber: @JosephEagar
Removed subscriber: @dmcgrath

Added subscriber: @JosephEagar Removed subscriber: @dmcgrath
Pablo Dobarro was assigned by Joseph Eagar 2020-10-23 02:57:05 +02:00
Member

Adding OPTYPE_UNDO to ot->flag in MESH_OT_paint_mask_extract in editmesh_mask_extract.c seems to fix this bug. Should all the operators in that file have that flag set?

Adding OPTYPE_UNDO to ot->flag in MESH_OT_paint_mask_extract in editmesh_mask_extract.c seems to fix this bug. Should all the operators in that file have that flag set?
Member

Okay, why does it say I removed a subscriber. Let's try that again.

Okay, why does it say I removed a subscriber. Let's try that again.
Member

Added subscriber: @dmcgrath

Added subscriber: @dmcgrath
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

@JosephEagar : sounds right to flag OPTYPE_UNDO
It is similar in python, see #77557 (Python Operators that add/remove ID data without an undo step crash Blender)

This is related to new UNDO btw. it does not crash with Preferences > Experimental > Undo Legacy

@JosephEagar : sounds right to flag `OPTYPE_UNDO` It is similar in python, see #77557 (Python Operators that add/remove ID data without an undo step crash Blender) This is related to new UNDO btw. it does not crash with `Preferences` > `Experimental` > `Undo Legacy`
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

CC @mont29

CC @mont29

This issue was referenced by 81462f86bc

This issue was referenced by 81462f86bc5fd8d8a51bdfb39f111570f7c3124e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @carlosmu

Added subscriber: @carlosmu

Apparently it has already been reported before. Sorry for duplicate the task, but it has not been resolved. Thanks!!
https://developer.blender.org/T94449

Apparently it has already been reported before. Sorry for duplicate the task, but it has not been resolved. Thanks!! https://developer.blender.org/T94449
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81984
No description provided.