Fix T81984: Crash in sculpt undo with mask extract after dyntopo toggle

More operators missing the mandatory undo flag...