source/blender/editors/mesh/editmesh_mask_extract.c
@@ -346,7 +346,7 @@ void MESH_OT_paint_mask_extract(wmOperatorType *ot)
   ot->invoke = paint_mask_extract_invoke;
   ot->exec = paint_mask_extract_exec;
 
-  ot->flag = OPTYPE_REGISTER;
+  ot->flag = OPTYPE_REGISTER | OPTYPE_UNDO;
 
   RNA_def_float(
       ot->srna,
@@ -430,7 +430,7 @@ void MESH_OT_face_set_extract(wmOperatorType *ot)
   ot->invoke = face_set_extract_invoke;
   ot->modal = face_set_extract_modal;
 
-  ot->flag = OPTYPE_REGISTER;
+  ot->flag = OPTYPE_REGISTER | OPTYPE_UNDO;
 
   geometry_extract_props(ot->srna);
 }
@@ -598,7 +598,7 @@ void MESH_OT_paint_mask_slice(wmOperatorType *ot)
   ot->poll = geometry_extract_poll;
   ot->exec = paint_mask_slice_exec;
 
-  ot->flag = OPTYPE_REGISTER;
+  ot->flag = OPTYPE_REGISTER | OPTYPE_UNDO;
 
   RNA_def_float(
       ot->srna,
